updated api docs and routes and added hot reload
