# api/src/models/user.ts
@@ -2,7 +2,8 @@ import { createSchema, Type, typedModel, ExtractDoc } from 'ts-mongoose';
 
 export const UserSchema = createSchema({
   name: Type.string(),
-  email: Type.string({ required: true }),
+  email: Type.string({ required: true, unique: true }),
+  password: Type.string({ required: true }),
   schoolStartDate: Type.date(),
   schoolId: Type.objectId(),
   courseId: Type.objectId()
